--- a/index.html
+++ b/index.html
@@ -3,23 +3,44 @@
 
 <head>
 	<meta charset="utf-8">
+	<!-- FAVORITE AND TOUCH ICONS -->
 	<meta name="theme-color" content="#2a007d">
-	<link rel="shortcut icon" href="/LOGO EDMAN MINI Nav.png" type="image/x-icon">
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="/assets/img/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/img/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/img/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/img/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="/assets/img/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/img/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="/assets/img/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/img/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="/assets/img/favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="/assets/img/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="/assets/img/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="/assets/img/favicon-16x16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="/assets/img/favicon-128.png" sizes="128x128" />
+	<meta name="msapplication-square70x70logo" content="/assets/img/mstile-70x70.png" />
+	<meta name="msapplication-square150x150logo" content="/assets/img/mstile-150x150.png" />
+	<meta name="msapplication-wide310x150logo" content="/assets/img/mstile-310x150.png" />
+	<meta name="msapplication-square310x310logo" content="/assets/img/mstile-310x310.png" />
+
+	<LINK REL="SHORTCUT ICON" HREF="assets/img/Palm logo.png">
+
+	
+
+
+
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<meta name="viewport" content="width=device-width,initial-scale=1, user-scalabe=no" />
-	<title>Welcome to the
-		tech
-		trick
-		creole| Official Site </title>
+
+
+	<title>The tech trick creole| Official Site </title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css">
-
-
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="./css/dropdown.css">
 	<link rel="stylesheet" href="./css/modal.css">
 
 	<header>
-		<div class="logo" ref="index.html"> <img src="./LOGO EDMAN MINI Nav.png"></div>
+		<div class="logo" ref="index.html"> <img src="assets/img/Logo_Nav.png"></div>
 
 		<nav>
 			<ul>
